--- a/신동규/10828풀이.md
+++ b/신동규/10828풀이.md
@@ -1,11 +1,22 @@
-//
-//  main.cpp
-//  BaekJoon10828
-//
-//  Created by 신동규 on 2018. 5. 21..
-//  Copyright © 2018년 신동규. All rights reserved.
-//
+# 백준 9012 풀이
 
+문제
+
+정수를 저장하는 스택을 구현한 다음, 입력으로 주어지는 명령을 처리하는 프로그램을 작성하시오.
+
+명령은 총 다섯 가지이다.
+
+- push X: 정수 X를 스택에 넣는 연산이다.
+- pop: 스택에서 가장 위에 있는 정수를 빼고, 그 수를 출력한다. 만약 스택에 들어있는 정수가 없는 경우에는 -1을 출력한다.
+- size: 스택에 들어있는 정수의 개수를 출력한다.
+- empty: 스택이 비어있으면 1, 아니면 0을 출력한다.
+- top: 스택의 가장 위에 있는 정수를 출력한다. 만약 스택에 들어있는 정수가 없는 경우에는 -1을 출력한다.
+
+------
+
+풀이
+
+```c++
 #include <iostream>
 #include <string> // string 객체 사용을 위한 선언
 
@@ -28,13 +39,13 @@ int main(int argc, const char * argv[]) {
         
         std::cin >> order ;// 명령어를 받음.
         
-        
+     
         if (order == "push"){// push 연산
-            
+
             std::cin >> num;
             top++;
             stack[top] = num;
-            
+
         }
         
         else if (order == "top"){//top 에 있는 값을 출력.
@@ -43,16 +54,16 @@ int main(int argc, const char * argv[]) {
                 
             }
             else{
-                std::cout << stack[top]<<std::endl;
+            std::cout << stack[top]<<std::endl;
             }
-            
+
         }
         
         else if (order == "size"){// 현재  스택의 크기를 출력 top +1의 값은 스택의 크기
             
             std::cout << top+1<<std::endl;
-            
-            
+           
+
         }
         
         else if (order == "empty"){ // 스택이 비어있는지 판별 . 1이면 비어있음 0이면 비어있지않음.
@@ -61,29 +72,35 @@ int main(int argc, const char * argv[]) {
             }
             else{
                 std::cout << 0<<std::endl;
-                
+            
             }
         }
         
         else if (order == "pop") {
-            // pop 연산 top에있는 value를 출력하고 그 인덱스의 값을 초기화 후
+            // pop 연산 top에있는 value를 출력하고 그 인덱스의 값을 초기화 후 
             //top을 하나 내린다.
             if (top == -1){
                 std::cout << top<<std::endl;// 이미 스택이 비어있으면 -1 를 출력.
                 
             }
             else{
-                
-                std::cout << stack[top]<<std::endl;
-                stack[top] = NULL;
-                top--;
-                
+
+            std::cout << stack[top]<<std::endl;
+            stack[top] = NULL;
+            top--;
+       
             }
         }
         
         
     }
-    
+   
     return 0;
 }
+
+```
+
+
+
+
 
