--- a/신동규/9012풀이.md
+++ b/신동규/9012풀이.md
@@ -1,11 +1,16 @@
-//
-//  main.cpp
-//  BaekJoon9012
-//
-//  Created by 신동규 on 2018. 5. 21..
-//  Copyright © 2018년 신동규. All rights reserved.
-//
+# 백준 9012 풀이
 
+문제
+
+괄호 문자열(Parenthesis String, PS)은 두 개의 괄호 기호인 ‘(’ 와 ‘)’ 만으로 구성되어 있는 문자열이다. 그 중에서 괄호의 모양이 바르게 구성된 문자열을 올바른 괄호 문자열(Valid PS, VPS)이라고 부른다. 한 쌍의 괄호 기호로 된 “( )” 문자열은 기본 VPS 이라고 부른다. 만일 x 가 VPS 라면 이것을 하나의 괄호에 넣은 새로운 문자열 “(x)”도 VPS 가 된다. 그리고 두 VPS x 와 y를 접합(concatenation)시킨 새로운 문자열 xy도 VPS 가 된다. 예를 들어 “(())()”와 “((()))” 는 VPS 이지만 “(()(”, “(())()))” , 그리고 “(()” 는 모두 VPS 가 아닌 문자열이다. 
+
+여러분은 입력으로 주어진 괄호 문자열이 VPS 인지 아닌지를 판단해서 그 결과를 YES 와 NO 로 나타내어야 한다. 
+
+---
+
+풀이
+
+```c++
 #include <iostream>
 #include <string> // c++ 의 string 객체를 사용.
 
@@ -15,7 +20,7 @@ int main(int argc, const char * argv[]) {
     
     int num; // 몇번의 문자열을 판별할것인지에대한 변수 선언 .
     string parenthesis; //string 객체에 변수 선언.
-    
+
     cin >> num ; // 몇번 문자열을 받을것인지 받아옴.
     
     for (int i = 0 ; i < num; i++){
@@ -27,17 +32,17 @@ int main(int argc, const char * argv[]) {
         int top = -1; // 탑은 -1 부터 시작.
         
         for (int j = 0 ; j < length; j++){
-            
+        
             char value = parenthesis[j];
             
             if (value == '('){
-                //'x' 는 기계의 문자 집합에있는 문자 x의 숫자 값을 나타내는 정수.
-                //"x" 는 길이가 2 자이고 'x' 다음에 '\0' 으로 구성된 문자 배열.
-                //' ' 와 "" 를 혼동하지 말것!
+            //'x' 는 기계의 문자 집합에있는 문자 x의 숫자 값을 나타내는 정수. 
+            //"x" 는 길이가 2 자이고 'x' 다음에 '\0' 으로 구성된 문자 배열.
+            //' ' 와 "" 를 혼동하지 말것! 
                 
                 top++;
                 stack[top] = value;// top을 하나 올려주고 value를 넣는다 . (push 연산)
-                
+               
             }
             else{
                 if (top == -1){
@@ -49,28 +54,34 @@ int main(int argc, const char * argv[]) {
                     
                 }
                 else{
-                    stack[top] = NULL;//top 위치를 비우고  top을 하나 내린다 (pop 연산)
-                    top--;
-                    
+                stack[top] = NULL;//top 위치를 비우고  top을 하나 내린다 (pop 연산)
+                top--;
+              
                 }
             }
             
-            
+           
         }
         if (top == -1) {
             cout <<"YES"<< endl; // pop 연산이 다되어 스택이 비어있어야 YES
             
         }
         else{
-            cout << "NO"<< endl;// pop 연산이 남았거나,
-            //첫 index에 ')'이들어와 top 이 1이 된경우 에는     NO
+             cout << "NO"<< endl;// pop 연산이 남았거나,
+            				//첫 index에 ')'이들어와 top 이 1이 된경우 에는 	NO
         }
         
-        delete [] stack;// 동적할당된 배열 해제
-        
-        
+        delete [] stack;// 동적할당된 배열 해제 
+
+
     }
     
-    
+
     
 }
+```
+
+
+
+
+
