--- a/류수연/류수연.md
+++ b/류수연/류수연.md
@@ -1,4 +1,10 @@
 # **AlgorithmStudy_SMU**
 
-* 류수연의 알고리즘 스터디 폴더
+* 류수연의 알고리즘 스터디 폴더 [git](https://github.com/shindk8659/AlgorithmStudy_SMU)
+
+* 180522 - 백준9012, 백준10828 완료
+
+  
+
+
 
