--- a/배정은/배정은.md
+++ b/배정은/배정은.md
@@ -2,3 +2,11 @@
 
 * 배정은의 알고리즘 스터디 폴더
 
+* 2018년 05월 22일 스터디 실행
+
+  [백준 10828번 스택](https://www.acmicpc.net/problem/10828)
+
+  [백준 9012번 괄호](https://www.acmicpc.net/problem/9012)
+
+  
+
