--- a/신동규/신동규.md
+++ b/신동규/신동규.md
@@ -1,5 +1,6 @@
 # **AlgorithmStudy_SMU**
 
 * 신동규의 알고리즘 스터디 폴더
- *  백준 9012(스택) , 백준10828(스택) 완료 5/21
- 
+   * 백준 9012(스택) , 백준10828(스택) 완료 5/21
+   * 5/22 오프라인 스터디
+
