--- a/배정은/배정은.md
+++ b/배정은/배정은.md
@@ -10,5 +10,9 @@
 
 * 2018년 05월 29일 스터디 실행
 
-  
+  [백준 2178번 미로](https://www.acmicpc.net/problem/2178)
+
+  [백준 2869번 달팽이는 올라가고싶다](https://www.acmicpc.net/problem/2869)
+
+  [백준 7662번 이중우선순위큐](https://www.acmicpc.net/problem/7662)
 
